add target='_blank' for github & youtube links

--- a/index.html
+++ b/index.html
@@ -384,11 +384,11 @@
                                         please watch my screencast below: -->
                                 </p>
                                 <!-- FIX ME:  Need to change hyperlink once screencast is posted to youtube
-                                    <p class="mb-4"><a href=https://www.youtube.com/watch?v=in1-8KDbTXw>https://www.youtube.com/watch?v=in1-8KDbTXw</a></p>
+                                    <p class="mb-4"><a href="https://www.youtube.com/watch?v=in1-8KDbTXw" target="_blank">https://www.youtube.com/watch?v=in1-8KDbTXw</a></p>
                                 -->
                                 <p class="mb-4">For the source code, please visit my Github repository:</p>
                                 <p class="mb-4"><a
-                                        href=https://github.com/bkoconnell/floweringspaces>https://github.com/bkoconnell/floweringspaces/</a>
+                                        href="https://github.com/bkoconnell/floweringspaces" target="_blank">https://github.com/bkoconnell/floweringspaces/</a>
                                 </p>
                                 <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
@@ -436,7 +436,7 @@
                                 <p class="mb-4">For a detailed review of this project, please watch my final project
                                     presentation here:</p>
                                 <p class="mb-4"><a
-                                        href=https://www.youtube.com/watch?v=in1-8KDbTXw>https://www.youtube.com/watch?v=in1-8KDbTXw</a>
+                                        href="https://www.youtube.com/watch?v=in1-8KDbTXw" target="_blank">https://www.youtube.com/watch?v=in1-8KDbTXw</a>
                                 </p>
                                 <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
@@ -506,13 +506,13 @@
                                 <br />
                                 <p class="mb-4">For my Project One source code, visit the following repository: </p>
                                 <p class="mb-4"><a
-                                        href=https://github.com/bkoconnell/CS340-final-project/tree/main/project_one>https://github.com/bkoconnell/CS340-final-project/tree/main/project_one/</a>
+                                        href="https://github.com/bkoconnell/CS340-final-project/tree/main/project_one" target="_blank">https://github.com/bkoconnell/CS340-final-project/tree/main/project_one/</a>
                                 </p>
                                 <br />
                                 <p class="mb-4">For additional NoSQL assignment submissions, visit the following
                                     repository: </p>
                                 <p class="mb-4"><a
-                                        href=https://github.com/bkoconnell/CS340-final-project/tree/main/mongodb_assignments>https://github.com/bkoconnell/CS340-final-project/tree/main/mongodb_assignments/</a>
+                                        href="https://github.com/bkoconnell/CS340-final-project/tree/main/mongodb_assignments" target="_blank">https://github.com/bkoconnell/CS340-final-project/tree/main/mongodb_assignments/</a>
                                 </p>
                                 <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
@@ -567,7 +567,7 @@
                                     You can also view the CS 340 README.docx for more details regarding the project
                                     submission:</p>
                                 <p class="mb-4"><a
-                                        href=https://github.com/bkoconnell/CS340-final-project>https://github.com/bkoconnell/CS340-final-project/</a>
+                                        href="https://github.com/bkoconnell/CS340-final-project" target="_blank">https://github.com/bkoconnell/CS340-final-project/</a>
                                 </p>
                                 <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
@@ -617,7 +617,7 @@
                                     View repository for source code and Readme file:
                                 </p>
                                 <p class="mb-4"><a
-                                        href=https://github.com/bkoconnell/cs350-milestones>https://github.com/bkoconnell/cs350-milestones/</a>
+                                        href="https://github.com/bkoconnell/cs350-milestones" target="_blank">https://github.com/bkoconnell/cs350-milestones/</a>
                                 </p>
                                 <br />
                                 <h6 class="mb-4">Milestone 1 - Sound Sensor </h6>
@@ -631,11 +631,11 @@
                                 </p>
                                 <p class="mb-4">Milestone 1 source code:
                                     <a
-                                        href=https://github.com/bkoconnell/cs350-milestones/tree/main/milestone1_sound_sensor>https://github.com/bkoconnell/cs350-milestones/tree/main/milestone1_sound_sensor
+                                        href="https://github.com/bkoconnell/cs350-milestones/tree/main/milestone1_sound_sensor" target="_blank">https://github.com/bkoconnell/cs350-milestones/tree/main/milestone1_sound_sensor
                                     </a>
                                 </p>
                                 <p class="mb-4">Milestone 1 demo:
-                                    <a href=https://youtu.be/Qr349Zf1F6U>https://youtu.be/Qr349Zf1F6U</a><br />
+                                    <a href="https://youtu.be/Qr349Zf1F6U" target="_blank">https://youtu.be/Qr349Zf1F6U</a><br />
                                     (ensure the video is set to the highest quality)
                                 </p>
                                 <br />
@@ -665,11 +665,11 @@
                                 </p>
                                 <p class="mb-4">Milestone 2 source code:
                                     <a
-                                        href=https://github.com/bkoconnell/cs350-milestones/tree/main/milestone2_dht_sensor>https://github.com/bkoconnell/cs350-milestones/tree/main/milestone2_dht_sensor
+                                        href="https://github.com/bkoconnell/cs350-milestones/tree/main/milestone2_dht_sensor" target="_blank">https://github.com/bkoconnell/cs350-milestones/tree/main/milestone2_dht_sensor
                                     </a>
                                 </p>
                                 <p class="mb-4">Milestone 2 demo:
-                                    <a href=https://youtu.be/Epvm2UJLJi0>https://youtu.be/Epvm2UJLJi0</a><br />
+                                    <a href="https://youtu.be/Epvm2UJLJi0" target="_blank">https://youtu.be/Epvm2UJLJi0</a><br />
                                     (ensure the video is set to the highest quality)
                                 </p>
                                 <br />
@@ -697,11 +697,11 @@
                                 </p>
                                 <p class="mb-4">Milestone 3 source code:
                                     <a
-                                        href=https://github.com/bkoconnell/cs350-milestones/tree/main/milestone3_light_sensor>https://github.com/bkoconnell/cs350-milestones/tree/main/milestone3_light_sensor
+                                        href="https://github.com/bkoconnell/cs350-milestones/tree/main/milestone3_light_sensor" target="_blank">https://github.com/bkoconnell/cs350-milestones/tree/main/milestone3_light_sensor
                                     </a>
                                 </p>
                                 <p class="mb-4">Milestone 3 demo:
-                                    <a href=https://youtu.be/Vu1d4RBZwRk>https://youtu.be/Vu1d4RBZwRk</a><br />
+                                    <a href="https://youtu.be/Vu1d4RBZwRk" target="_blank">https://youtu.be/Vu1d4RBZwRk</a><br />
                                     (ensure the video is set to the highest quality)
                                 </p>
                                 <br />
@@ -756,7 +756,7 @@
                                     three milestones for this class. View repository for source code and Readme file:
                                 </p>
                                 <p class="mb-4"><a
-                                        href=https://github.com/bkoconnell/cs350-final-project>https://github.com/bkoconnell/cs350-final-project/</a>
+                                        href="https://github.com/bkoconnell/cs350-final-project" target="_blank">https://github.com/bkoconnell/cs350-final-project/</a>
                                 </p>
                                 <br />
                                 <h6 class="mb-4">Milestone 4 - Weather Station & Web Dashboard </h6>
@@ -770,10 +770,10 @@
                                 </p>
                                 <p class="mb-4">Milestone 4 source code:
                                     <a
-                                        href=https://github.com/bkoconnell/cs350-final-project/tree/main/milestone4_dht_web_dashboard>https://github.com/bkoconnell/cs350-final-project/tree/main/milestone4_dht_web_dashboard/</a>
+                                        href="https://github.com/bkoconnell/cs350-final-project/tree/main/milestone4_dht_web_dashboard" target="_blank">https://github.com/bkoconnell/cs350-final-project/tree/main/milestone4_dht_web_dashboard/</a>
                                 </p>
                                 <p class="mb-4">Milestone 4 demo:
-                                    <a href=https://youtu.be/W_rE-gQg8Z8>https://youtu.be/W_rE-gQg8Z8</a><br />
+                                    <a href="https://youtu.be/W_rE-gQg8Z8" target="_blank">https://youtu.be/W_rE-gQg8Z8</a><br />
                                     (ensure the video is set to the highest quality)
                                 </p>
                                 <br />
@@ -784,12 +784,12 @@
                                 </p>
                                 <p class="mb-4">Final Project source code:
                                     <a
-                                        href=https://github.com/bkoconnell/cs350-final-project/tree/main/final_project_weather_station>https://github.com/bkoconnell/cs350-final-project/tree/main/final_project_weather_station/
+                                        href="https://github.com/bkoconnell/cs350-final-project/tree/main/final_project_weather_station" target="_blank">https://github.com/bkoconnell/cs350-final-project/tree/main/final_project_weather_station/
                                     </a>
                                 </p>
                                 <!-- No Demo Available (yet)
                                     <p class="mb-4">Milestone 2 demo: 
-                                        <a href=https://youtu.be/Epvm2UJLJi0>https://youtu.be/Epvm2UJLJi0</a><br />
+                                        <a href="https://youtu.be/Epvm2UJLJi0" target="_blank">https://youtu.be/Epvm2UJLJi0</a><br />
                                         (ensure the video is set to the highest quality)</p>
                                     <br />
                                 -->
@@ -863,7 +863,7 @@
                                     following repository: <br />
                                     (for screenshots, view the .docx file)</p>
                                 <p class="mb-4"><a
-                                        href=https://github.com/bkoconnell/DAD220-final-project>https://github.com/bkoconnell/DAD220-final-project</a>
+                                        href="https://github.com/bkoconnell/DAD220-final-project" target="_blank">https://github.com/bkoconnell/DAD220-final-project</a>
                                 </p>
                                 <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
@@ -901,7 +901,7 @@
                                 <!-- Portfolio Modal - Text-->
                                 <p class="mb-4">View repository for source code:</p>
                                 <p class="mb-4"><a
-                                        href=https://github.com/bkoconnell/floweringspaces>https://github.com/bkoconnell/floweringspaces/</a>
+                                        href="https://github.com/bkoconnell/floweringspaces" target="_blank">https://github.com/bkoconnell/floweringspaces/</a>
                                 </p>
                                 <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
@@ -939,7 +939,7 @@
                             <!-- Portfolio Modal - Text-->
                             <p class="mb-4">View repository for source code:</p>
                             <p class="mb-4"><a
-                                    href=https://github.com/bkoconnell/floweringspaces>https://github.com/bkoconnell/floweringspaces/</a>
+                                    href="https://github.com/bkoconnell/floweringspaces" target="_blank">https://github.com/bkoconnell/floweringspaces/</a>
                             </p>
                             <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                 <i class="fas fa-times fa-fw"></i>
