--- a/index.html
+++ b/index.html
@@ -449,6 +449,12 @@
                                     <p class="mb-4">My project improves upon the original class project, and the content for my project is original. 
                                         It is based on a real company, with their permission, but does not represent their official website.
                                     </p>
+                                    </br>
+                                    <p class="mb-4">Click here to view a slide presentation that highlights key features of this project:
+                                      <a
+                                        href=https://github.com/bkoconnell/bkoconnell.github.io/raw/master/assets/presentations/MEAN_stack.pptx>
+                                        https://github.com/bkoconnell/bkoconnell.github.io/raw/master/assets/presentations/MEAN_stack.pptx</a>
+                                    </p>
                                     <p> 
                                         <!-- For a detailed review of this project, including the specific differences from the original class project, 
                                         please watch my screencast below: -->
