Download Resume buttons open in new window

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
             <!-- Resume Section Button-->
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-dark" href="./assets/resume/BKO_resume_2023_v06.pdf">
+                <a class="btn btn-xl btn-outline-dark" href="./assets/resume/BKO_resume_2023_v06.pdf" target="_blank">
                     <i class="fas fa-download me-2"></i>
                     Download Resume
                 </a>
@@ -1070,7 +1070,7 @@
                                 <!-- Download Resume button-->
                                 <div class="text-center mt-4">
                                     <a class="btn btn-xl btn-outline-dark"
-                                        href="./assets/resume/BKO_resume_2023_v06.pdf">
+                                        href="./assets/resume/BKO_resume_2023_v06.pdf" target="_blank">
                                         <i class="fas fa-download me-2"></i>
                                         Download Resume
                                     </a>
