LinkedIn Around the Web opens in new window/tab

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
                         -->
-                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/bkoconnell">
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/bkoconnell" target="_blank">
                         <i class="fab fa-fw fa-linkedin-in"></i></a>
                     <!--
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
