LinkedIn and Download Resume links open in new window/tab

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
             <!-- Resume Section Button-->
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-dark" href="./assets/resume/BKO_resume_2023_v06.pdf">
+                <a class="btn btn-xl btn-outline-dark" href="./assets/resume/BKO_resume_2023_v06.pdf" target="_blank">
                     <i class="fas fa-download me-2"></i>
                     Download Resume
                 </a>
@@ -278,7 +278,7 @@
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
                         -->
-                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/bkoconnell">
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/bkoconnell" target="_blank">
                         <i class="fab fa-fw fa-linkedin-in"></i></a>
                     <!--
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
@@ -1070,7 +1070,7 @@
                                 <!-- Download Resume button-->
                                 <div class="text-center mt-4">
                                     <a class="btn btn-xl btn-outline-dark"
-                                        href="./assets/resume/BKO_resume_2023_v06.pdf">
+                                        href="./assets/resume/BKO_resume_2023_v06.pdf" target="_blank">
                                         <i class="fas fa-download me-2"></i>
                                         Download Resume
                                     </a>
