--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <p class="masthead-subheading font-weight-light mb-0">Software Engineer</p>
+            <p class="masthead-subheading font-weight-light mb-0">Software/DevOps Engineer</p>
         </div>
     </header>
 
@@ -1092,6 +1092,6 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts_v02.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
