Update to 2024 resume; update Masthead Subheading

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <p class="masthead-subheading font-weight-light mb-0">Software/DevOps Engineer</p>
+            <p class="masthead-subheading font-weight-light mb-0">Software Engineering / DevOps / Data Science</p>
         </div>
     </header>
 
@@ -202,14 +202,14 @@
                             <div class="portfolio-item-caption-content text-center text-white">
                                 <i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/resume/BKO_resume_2023_v07.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/resume/OConnell_B_resume_2024_onepage_v01.png" alt="..." />
                     </div>
                 </div>
             </div>
 
             <!-- Resume Section Button-->
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-dark" href="./assets/resume/BKO_resume_2023_v07.pdf" target="_blank">
+                <a class="btn btn-xl btn-outline-dark" href="./assets/resume/OConnell_B_resume_2024_onepage_v01.pdf" target="_blank">
                     <i class="fas fa-download me-2"></i>
                     Download Resume
                 </a>
@@ -1059,7 +1059,7 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Resume Modal - Image-->
-                                <img class="img-fluid rounded mb-5" src="assets/img/resume/BKO_resume_2023_v07.png"
+                                <img class="img-fluid rounded mb-5" src="assets/img/resume/OConnell_B_resume_2024_onepage_v01.png"
                                     alt="..." />
                                 <!-- Resume Modal - Text-->
                                 <!--
@@ -1070,7 +1070,7 @@
                                 <!-- Download Resume button-->
                                 <div class="text-center mt-4">
                                     <a class="btn btn-xl btn-outline-dark"
-                                        href="./assets/resume/BKO_resume_2023_v07.pdf" target="_blank">
+                                        href="./assets/resume/OConnell_B_resume_2024_onepage_v01.pdf" target="_blank">
                                         <i class="fas fa-download me-2"></i>
                                         Download Resume
                                     </a>
